# ChivaTask

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt  sitecustomize.py
.codex/skills/chivatask-architecture/: SKILL.md
.codex/skills/chivatask-design-system/: SKILL.md
.codex/skills/chivatask-modern-ui-audit/: SKILL.md
docs/adr/: 0001-arquitectura-modular-local.md
docs/ui/: DESIGN.md
src/: ajustes.py  base_datos.py  campus_moodle.py  clasificador.py  configuracion.py  credenciales.py  interfaz.py  main.py  modelos.py  notificaciones.py  sincronizacion.py
src/app/: __init__.py  arranque.py  tiempo_ejecucion.py
src/application/: __init__.py  caso_uso_sincronizacion.py  consultas_tareas.py  politica_notificaciones.py  puertos.py  servicio_ajustes.py
src/domain/: priorizacion.py  tiempo.py
src/resources/: __init__.py
src/shared/: __init__.py  redaccion.py
src/uph_pendientes/: __init__.py  __main__.py  ajustes.py  base_datos.py  campus_moodle.py  clasificador.py  configuracion.py  credenciales.py  interfaz.py  modelos.py  notificaciones.py  sincronizacion.py
src/uph_pendientes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_ajustes_consultas.py  test_arquitectura_imports.py  test_base_datos.py  test_caso_uso_sincronizacion.py  test_clasificador.py  test_entrypoint.py  test_hilos.py  test_iconos.py  test_presentacion.py  test_priorizacion.py  test_rendimiento_sincronizacion.py  test_seguridad.py
uph_pendientes/: __init__.py  __main__.py
(+81 files in other folders)
